--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,22 +10,191 @@
     <link rel="stylesheet" href="./css/responsive.css">
 
     <!-- FONTAWSOME -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+        integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 
 </head>
+
 <body>
+    <!-- container -->
     <div class="boolzap-container">
+
+        <!-- Left column -->
         <div class="boolzap-left">
-            <div class="left-header"></div>
-            <div class="left-notification"></div>
-            <div class="left-search"></div>
-            <div class="left-contacts"></div>
+
+            <!-- Header -->
+            <div class="left-header">
+                <img src="./img/avatar_io.jpg" alt="my-picture">
+                <div class="msg-function">
+                    <i class="fa-solid fa-circle-notch"></i>
+                    <i class="fa-solid fa-message"></i>
+                    <i class="fa-solid fa-ellipsis-vertical"></i>
+                </div>
+            </div>
+            <!-- Header -->
+
+            <!-- Notification -->
+            <div class="left-notification">
+                <i class="fa-solid fa-bell-slash"></i>
+                <div class="notification-content">
+                    <div>Ricevi notifiche di nuovi messaggi</div>
+                    <a href="">Attiva notifiche desktop</a>
+                </div>
+            </div>
+            <!-- Notification -->
+
+            <!-- Search -->
+            <div class="left-search">
+                <i class="fa-solid fa-magnifying-glass"></i>
+                <input type="text" placeholder="Cerca o inizia una nuova chat">
+            </div>
+            <!-- /Search -->
+
+            <!-- Contacts -->
+            <ul class="left-contacts">
+                <li class="contact">
+                    <img src="./img/avatar_1.jpg" alt="Michele">
+                    <div class="name-and-bio">
+                        <span>Michele</span>
+                        <p>lorem ipsum dolor sit amet</p>
+                    </div>
+                    <div class="time">16:15</div>
+                </li>
+                <li class="contact">
+                    <img src="./img/avatar_2.jpg" alt="Fabio">
+                    <div class="name-and-bio">
+                        <span>Fabio</span>
+                        <p>lorem ipsum dolor sit amet</p>
+                    </div>
+                    <div class="time">16:05</div>
+                </li>
+                <li class="contact">
+                    <img src="./img/avatar_3.jpg" alt="Samuele">
+                    <div class="name-and-bio">
+                        <span>Samuele</span>
+                        <p>lorem ipsum dolor sit amet</p>
+                    </div>
+                    <div class="time">16:03</div>
+                </li>
+                <li class="contact">
+                    <img src="./img/avatar_4.jpg" alt="AlessandroB.">
+                    <div class="name-and-bio">
+                        <span>Alessandro B.</span>
+                        <p>lorem ipsum dolor sit amet</p>
+                    </div>
+                    <div class="time">15:50</div>
+                </li>
+                <li class="contact">
+                    <img src="./img/avatar_5.jpg" alt="AlessandroL.">
+                    <div class="name-and-bio">
+                        <span>Alessandro L.</span>
+                        <p>lorem ipsum dolor sit amet</p>
+                    </div>
+                    <div class="time">15:45</div>
+                </li>
+                <li class="contact">
+                    <img src="./img/avatar_6.jpg" alt="Claudia">
+                    <div class="name-and-bio">
+                        <span>Claudia</span>
+                        <p>lorem ipsum dolor sit amet</p>
+                    </div>
+                    <div class="time">15:40</div>
+                </li>
+                <li class="contact">
+                    <img src="./img/avatar_7.jpg" alt="Federico">
+                    <div class="name-and-bio">
+                        <span>Federico</span>
+                        <p>lorem ipsum dolor sit amet</p>
+                    </div>
+                    <div class="time">15:22</div>
+                </li>
+                <li class="contact">
+                    <img src="./img/avatar_8.jpg" alt="Davide">
+                    <div class="name-and-bio">
+                        <span>Davide</span>
+                        <p>lorem ipsum dolor sit amet</p>
+                    </div>
+                    <div class="time">15:15</div>
+                </li>
+            </ul>
+            <!-- /Contacts -->
+
         </div>
+        <!-- /Left column -->
+
+        <!-- Right column -->
         <div class="boolzap-right">
-            <div class="right-header"></div>
-            <div class="right-messages-container"></div>
-            <div class="right-footer"></div>
+            <!-- header -->
+            <div class="right-header">
+                <div class="contact-infos">
+                    <img src="./img/avatar_1.jpg" alt="my-picture">
+                    <div>
+                        <span>Michele</span>
+                        <p>Ultimo accesso oggi alle 16:26</p>
+                    </div>
+                </div>
+                <div class="contact-function">
+                    <i class="fa-solid fa-magnifying-glass"></i>
+                    <i class="fa-solid fa-paperclip"></i>
+                    <i class="fa-solid fa-ellipsis-vertical"></i>
+                </div>
+            </div>
+            <!-- /header -->
+
+            <!-- messages -->
+            <div class="right-messages-container">
+                <!-- msg box -->
+                <div class="message-box">
+                    <!-- msg sent -->
+                    <div class="msg-sent">
+                        <div class="msg-content">
+                                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquam tempora corrupti
+                                    voluptate dolorum perspiciatis laudantium cumque ex consectetur, quam, dolorem
+                                    doloremque ab rerum. Aliquid cupiditate molestias possimus repellendus, in doloremque?
+                                </p>
+
+                            <div class="msg-hour">
+                                <i class="fa-solid fa-chevron-down"></i>
+                                <div>16:13</div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- /msg sent -->
+
+                    <!-- msg recived -->
+                    <div class="msg-recive">
+                        <div class="msg-content">
+                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquam tempora corrupti
+                                voluptate dolorum perspiciatis laudantium cumque ex consectetur, quam, dolorem
+                                doloremque ab rerum. Aliquid cupiditate molestias possimus repellendus, in doloremque?
+                            </p>
+
+                            <div class="msg-hour">
+                                <i class="fa-solid fa-chevron-down"></i>
+                                <div>16:15</div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- /msg recived -->
+                </div>
+                <!-- /msg box -->
+            </div>
+            <!-- /messages -->
+
+            <!-- footer -->
+            <div class="right-footer">
+                <i class="fa-regular fa-face-smile"></i>
+                <input type="text" placeholder="Scrivi un messaggio">
+                <i class="fa-solid fa-microphone"></i>
+            </div>
+            <!-- /footer -->
+
         </div>
+        <!-- /Right column -->
+
     </div>
+    <!-- /container -->
 </body>
+
 </html>
